kubernetes/infrastructure/configs/base/gateway/gateway-gc.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: GatewayClass
metadata:
  name: kong
  annotations:
    konghq.com/gatewayclass-unmanaged: "true"

spec:
  controllerName: konghq.com/kic-gateway-controller
