kubernetes/infrastructure/configs/base/gateway/gateway-gtw.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: kong
  namespace: gateway
spec:
  gatewayClassName: kong
  listeners:
    - name: proxy
      port: 80
      protocol: HTTP
      allowedRoutes:
        namespaces:
          from: All
    - name: proxy-https
      port: 443
      protocol: HTTPS
      allowedRoutes:
        namespaces:
          from: All
      tls:
        mode: Terminate
        certificateRefs:
          - kind: Secret
            name: proxy-certificate-tls   # This is the secret that contains the TLS certificate for the domain home.example.com
            # The secret must be in the same namespace as the Gateway.
            # If secret does not exist, Kong will present a self-signed certificate.
            namespace: gateway
